scss/_stepper.scss
@use "sass:map";
@use "config" as *;
@use "functions" as *;
@use "layout/breakpoints" as *;
@use "mixins/border-radius" as *;
@use "mixins/tokens" as *;

$stepper-tokens: () !default;

// scss-docs-start stepper-tokens
// stylelint-disable-next-line scss/dollar-variable-default
$stepper-tokens: defaults(
  (
    --stepper-size: 2rem,
    --stepper-gap: 1rem,
    --stepper-font-size: var(--font-size-sm),
    --stepper-bg: var(--bg-2),
    --stepper-track-size: .125rem,
    --stepper-active-color: var(--primary-contrast),
    --stepper-active-bg: var(--primary-bg),
  ),
  $stepper-tokens
);
// scss-docs-end stepper-tokens

// scss-docs-start stepper-horizontal-mixin
@mixin stepper-horizontal() {
  display: inline-grid;
  grid-auto-columns: 1fr;
  grid-auto-flow: column;

  .stepper-item {
    grid-template-rows: repeat(2, var(--stepper-size));
    grid-template-columns: auto;
    justify-items: center;
    align-items: start;

    &::after {
      top: calc((var(--stepper-size) * .5) - (var(--stepper-track-size) * .5));
      right: 0;
      bottom: auto;
      left: calc(-50% - var(--stepper-gap));
      width: auto;
      height: var(--stepper-track-size);
    }

    &:last-child::after {
      right: 50%;
    }
  }
}
// scss-docs-end stepper-horizontal-mixin

// scss-docs-start stepper-css
.stepper {
  // scss-docs-start stepper-css-vars
  @include tokens($stepper-tokens);
  // scss-docs-end stepper-css-vars

  display: grid;
  grid-auto-rows: 1fr;
  grid-auto-flow: row;
  gap: var(--stepper-gap);
  padding-left: 0;
  list-style: none;
  counter-reset: stepper;
}

.stepper-item {
  position: relative;
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: var(--stepper-size) auto;
  gap: .5rem;
  place-items: center;
  justify-items: start;
  text-align: center;
  text-decoration: none;

  // The counter
  &::before {
    position: relative;
    z-index: 1;
    display: flex;
    flex-shrink: 0;
    align-items: center;
    justify-content: center;
    width: var(--stepper-size);
    height: var(--stepper-size);
    padding: .5rem;
    font-size: var(--stepper-font-size);
    font-weight: 600;
    line-height: 1;
    text-align: center;
    content: counter(stepper);
    counter-increment: stepper;
    background-color: var(--stepper-bg);
    @include border-radius(50%);
  }

  // Connecting lines
  &::after {
    position: absolute;
    top: calc(var(--stepper-gap) * -1);
    bottom: 100%;
    left: calc((var(--stepper-size) * .5) - (var(--stepper-track-size) * .5));
    width: var(--stepper-track-size);
    content: "";
    background-color: var(--stepper-bg);
  }

  // Avoid sibling selector for easier CSS overrides
  &:first-child::after {
    display: none;
  }

  &.active {
    &::before,
    &::after {
      color: var(--theme-contrast, var(--stepper-active-color));
      background-color: var(--theme-bg, var(--stepper-active-bg));
    }
  }
}

@each $breakpoint in map.keys($breakpoints) {
  @include media-breakpoint-up($breakpoint) {
    $infix: breakpoint-infix($breakpoint, $breakpoints);

    .stepper-horizontal#{$infix} {
      @include stepper-horizontal();
    }
  }
}

// scss-docs-start stepper-overflow
.stepper-overflow {
  container-type: inline-size;
  overflow-x: auto;
  overscroll-behavior-x: contain;
  -webkit-overflow-scrolling: touch;

  > .stepper {
    width: max-content;
    min-width: 100%;
  }
}
// scss-docs-end stepper-overflow

